[package]
name = "rustipass"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
cxx = { workspace = true }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"

[build-dependencies]
cxx-build = { workspace = true }
